<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />


<EditText
    android:id="@+id/title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="bez názvu"
    android:inputType="text"
    android:layout_marginBottom="10dp"
    />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/frequency_label"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />

<EditText
    android:id="@+id/frequency"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:ems="10"
    android:inputType="number"
    android:text="20"
    android:layout_marginBottom="10dp"
    />

<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/noticeset"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />

<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/spinner"
    android:layout_gravity="center_horizontal"
    android:entries="@array/notice_array"
    android:spinnerMode="dropdown"
    android:layout_marginBottom="10dp"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/gpsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/gps"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/gpsStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notready"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

    </LinearLayout>

    <Button
        android:id="@+id/measure"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="startMeasurement"
        android:text="@string/measure"
        />

    <Button
        android:id="@+id/exit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="exit"
        android:text="@string/quit"
        />

</LinearLayout>

