<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/route"
        android:id="@+id/title"
        android:paddingBottom="10dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_label" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/location_speed_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_speed_label"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.0"
            android:id="@+id/location_speed"
            android:layout_gravity="center_horizontal"

        />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" km/h"
            android:id="@+id/location_speed_unit"
            android:layout_gravity="center_horizontal"
            android:paddingTop="4dp"

            />

    </LinearLayout>

    <TextView
    android:id="@+id/location_info_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/location_info_label"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location_latitude"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/novalue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="5dp"
            android:layout_row="0"
            android:layout_gravity="center_vertical"
            android:layout_column="0"
  />

        <TextView
                android:id="@+id/location_longitude"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/novalue"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="5dp"
            android:layout_row="0"
            android:layout_column="1"
/>
    </LinearLayout>

    <TextView
    android:id="@+id/accelerometer_label"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/accelerometer_label"
    />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="0.0"
            android:id="@+id/magnitude"
            android:layout_gravity="center_horizontal"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" m/s-2"
            android:id="@+id/magnitude_unit"
            android:layout_gravity="center_horizontal"
            android:paddingTop="4dp"

            />

    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:layout_gravity="center_horizontal" />

    <Button
    android:id="@+id/stopmeasure"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/endmeasurement"
    android:onClick="stopMeasurement"
    />

</LinearLayout>

